@@ -2058,6 +2058,62 @@ class DirTestCase(_tempdirTestCase):
         assert g.get_csig() + " g" == files[2], files
         assert s.get_csig() + " sub" == files[3], files
 
+    def test_md5_chunksize(self):
+        """
+        Test verifying that File.get_csig() correctly uses md5_chunksize. This
+        variable is documented as the md5 chunksize in kilobytes. This test
+        verifies that if the file size is less than the md5 chunksize,
+        get_contents() is called; otherwise, it verifies that get_contents()
+        is not called.
+        """
+        chunksize = SCons.Node.FS.File.md5_chunksize
+        test = self.test
+
+        test.subdir('chunksize_dir')
+        test.write(['chunksize_dir', 'f1'], 'a' * (chunksize - 1))
+        test.write(['chunksize_dir', 'f2'], 'a' * chunksize)
+        test.write(['chunksize_dir', 'f3'], 'a' * (chunksize * 1024))
+
+        dir = self.fs.Dir('chunksize_dir')
+        f1 = dir.File('f1')
+        f2 = dir.File('f2')
+        f3 = dir.File('f3')
+
+        # Expect f1 and f2 to call get_contents(), while f3 will not because it
+        # will do reads of chunksize bytes at a time.
+        expected_get_contents_calls = {f1, f2}
+        self.actual_get_contents_calls = 0
+
+        def get_contents_override(file_object):
+            self.actual_get_contents_calls += 1
+            if file_object in expected_get_contents_calls:
+                return file_object._old_get_contents()
+            else:
+                raise Exception('get_contents was unexpectedly called on node '
+                                '%s' % file_object)
+
+        SCons.Node.FS.File._old_get_contents = SCons.Node.FS.File.get_contents
+        SCons.Node.FS.File.get_contents = get_contents_override.__get__(
+            None, SCons.Node.FS)
+
+        exception = None
+        try:
+            f1.get_csig()
+            f2.get_csig()
+            f3.get_csig()
+        except Exception as e:
+            exception = e
+            print('exception %s' % e)
+
+        SCons.Node.FS.File.get_contents = SCons.Node.FS.File._old_get_contents
+        delattr(SCons.Node.FS.File, '_old_get_contents')
+
+        if exception:
+            raise exception
+
+        assert self.actual_get_contents_calls == len(expected_get_contents_calls), \
+            self.actual_get_contents_calls
+
     def test_implicit_re_scans(self):
         """Test that adding entries causes a directory to be re-scanned
         """
